Implementar listado de gastos registrados
