# code/api/rest-server/src/main/kotlin/io/juancrrn/balancercore/restserver/models/ext/ExpenseAmountTypeExt.kt
@@ -13,3 +13,10 @@ fun ExpenseAmountType.toVO(): ExpenseAmountTypeVO {
         estimated -> ESTIMATED
     }
 }
+
+fun ExpenseAmountTypeVO.toModel(): ExpenseAmountType {
+    return when (this) {
+        FIXED -> fixed
+        ESTIMATED -> estimated
+    }
+}
