# code/api/rest-server/src/main/kotlin/io/juancrrn/balancercore/restserver/models/ext/RecurringExpenseStatusExt.kt
@@ -13,3 +13,10 @@ fun RecurringExpenseStatus.toVO(): RecurringExpenseStatusVO {
         done -> DONE
     }
 }
+
+fun RecurringExpenseStatusVO.toModel(): RecurringExpenseStatus {
+    return when (this) {
+        ACTIVE -> active
+        DONE -> done
+    }
+}
